This this the changelog file for the SoapyIris project.

Release 2018.03.0.1 (2018-03-21)
==========================

- configurable ethernet mtu for stream args (MTU key)

Release 2018.02.0.1 (pending)
==========================

- regex is broken in gcc < 4.9, ignore the version parsing
- Version update to match firmware from February 2018

Release 2018.01.0.1 (pending)
==========================

- try/catch for version parser in case of failure
- Version update to match firmware from January 2018

Release 2017.11.0.2 (pending)
==========================

- Added read/writeStream loop support for full contiguous buffers

Release 2017.11.0.1 (pending)
==========================

- Initial commit of SoapyIris project and repo creation