@@ -3,6 +3,7 @@ This this the changelog file for the SoapyIris project.
 Release 2018.03.0.1 (2018-03-21)
 ==========================
 
+- attempt to use soapyremote 0.7 feature stream bypass
 - configurable ethernet mtu for stream args (MTU key)
 
 Release 2018.02.0.1 (pending)
